--- a/drumkits/style.css
+++ b/drumkits/style.css
@@ -1,5 +1,4 @@
-
-body{
+body {
     background: aquamarine;
     display: flex;
     align-items: center;
@@ -7,23 +6,51 @@ body{
     height: 100%;
     justify-content: center;
     width: 100%;
+    flex-direction: column;
 }
 
-#sounds{
+#sounds {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    line-height: 50px;
 }
 
-.sound{
-border: 3px solid yellowgreen;
-width: 50px;
-height: 50px;
-background: yellow;
-margin: 20px;
-text-align: center;
-font-size: 30px;
-font-family: Arial, Helvetica, sans-serif;
-font-weight: bolder;
-color: tomato;
+.sound {
+    border: 8px solid tomato;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    margin: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-style: oblique;
+    color: rgb(20, 127, 199);
+}
+
+.highlight {
+    background-color: violet;
+}
+
+#menu {
+    border: 5px solid tomato;
+    background-color: teal;
+    padding: 10px;
+    display: flex;
+}
+
+#recordState{
+    border-radius: 50%;
+    border: 2px solid white;
+    width: 20px;
+    height: 20px;
+    background: grey;
+    margin: 10px;
+}
+
+button{
+    margin: 10px;
 }
